available meals, meals summary components with styles, header image z-index fix

--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -18,6 +18,7 @@
     width: 100%;
     height: 25rem;
     overflow: hidden;
+    z-index: 0;
 }
 
 .main-image img {
